fix spacing issues with arrows

--- a/main.css
+++ b/main.css
@@ -122,13 +122,12 @@ a:hover {
 }
 
 .aboutContent {
-    margin-top: 45px;
+    margin-top: 30px;
     font-family: 'Alegreya Sans', sans-serif;
     font-size: 24px;
     font-weight: 300;
     color: white;
     text-align: center;
-    /*line-height: 1.5;*/
 }
 
 .aboutContentItem {
@@ -310,8 +309,8 @@ a:hover {
     width: 100%;
     text-align: center;
     margin-top: 10%;
-    margin-bottom: 10%;
-}
+/*    margin-bottom: 10%;
+*/}
 
 .arrow {
     position: relative; 
